--- a/bin/public/Themes/clipboard/clipboard.css
+++ b/bin/public/Themes/clipboard/clipboard.css
@@ -1,4 +1,5 @@
 html, body { height: 100%; }
+
 .menu {
     right: 0px;
     top: 0px;
@@ -11,20 +12,23 @@ html, body { height: 100%; }
     font-size: 10px;
     transition: background-color 0.1s ease-in, width 0.2s ease-in-out;
 }
+
 .menu *:focus {
     outline: 0;
 }
+
 .menu.hide {
     width: 1em;
     height: 1em;
 }
+
 .menu:hover {
     z-index: 4;
     background: #586e75;
 }
-.menu button.switch,
+
 .menu button.copy {
-    background-image: url(./pencil.svg);
+    background-image: url(/img/pencil.svg);
     border-radius: 50%;
     float: right;
     z-index: 2;
@@ -36,23 +40,28 @@ html, body { height: 100%; }
     cursor: pointer;
     transition: border-color 0.1s ease-in, opacity 0.1s ease-in, width 0.1s ease-in;
 }
+
 .menu button.copy:hover {
     border-color: #b58900;
 }
+
 .menu img {
     width: 100%;
     transform: scale(1.75);
     transition: transform 0.1s cubic-bezier(0, 1.5, 1, 1.5), opacity 0.1s ease-in, width 0.1s ease-in;
     opacity: 0.5;
 }
+
 .menu img:hover {
     transform: scale(2.25);
     opacity: 1;
 }
+
 .menu.hide *:not(.hide) {
     width: 0;
     opacity: 0;
 }
+
 .menu .hide {
     height: 14px;
     z-index: 4;
@@ -64,6 +73,7 @@ html, body { height: 100%; }
     transition: border-width 0.1s ease-in, border-color 0.1s ease-in, left 0.1s ease-in, bottom 0.1s ease-in;
     cursor: pointer;
 }
+
 .menu:hover .hide {
     border-color: #cb4b16
 }
@@ -71,6 +81,7 @@ html, body { height: 100%; }
 .menu .hide:hover {
     border-color: #dc322f;
 }
+
 .menu.hide .hide {
     border-top-width: 0px;
     border-right-width: 0px;
@@ -82,10 +93,7 @@ html, body { height: 100%; }
     border-left-width: 0px;
     border-bottom-width: 0px;
 }
-.menu button.switch {
-    color: #cb4b16;
-    border: 2px solid #cb4b16;
-}
+
 .menu .clipboard {
     float: right;
     color: #657b83;
@@ -99,14 +107,6 @@ html, body { height: 100%; }
     color: #002b36;
 }
 
-.container.solarized.dark .terminal {
-   // background-color: #002b36!important;
-   // color: #839496!important;
-}
 .terminal > div {
     z-index: 3;
-}
-.container.solarized.light .terminal {
-    background-color: #fdf6e3!important;
-    color: #839496!important;
 }
